# bevy-jam-1

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  LICENSE.txt  README.md  index.html
assets/: PlayerHealthClimbing.pyxel  PlayerHealthStanding.pyxel  PlayerHearthFalling.pyxel  PlayerSpeedClimbing.pyxel  PlayerSpeedFalling.pyxel  PlayerStrengthClimbing.pyxel  PlayerStrengthFalling.pyxel  PlayerStrengthStanding.pyxel  default.ldtk  default_baked.ldtk
src/: components.rs  main.rs  systems.rs
