[package]
name = "bevy-jam-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs_ldtk = "0.1.0"
bevy_kira_audio = "0.8.0"

[dependencies.bevy]
version = "0.6.0"
default-features = false
# These are the remaining default features other than `bevy_audio` and `mp3`
features = [
  "bevy_winit",
  "bevy_gilrs",
  "render",
  "png",
  "hdr",
  "x11",
  "filesystem_watcher"
]
